--- a/assets/pages/projects.html
+++ b/assets/pages/projects.html
@@ -54,7 +54,7 @@
     <main>
         <div class="container-fluid">
             <div class="row">
-                <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
+                <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center projects-hero">
                     <div class="col-md-8 p-lg-5 mx-auto my-5">
                         <h1 class="display-4 fw-bold">Super-Projekte</h1>
                         <p class="lead fw-normal">
