--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Bootstrap Font Icon CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <!-- CSS -->
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
@@ -53,10 +55,10 @@
         </div>
     </header>
     <main>
-        <div class="container">
-            <div class="row px-4 py-5 my-5 text-center">
-                <h1 class="display-5 fw-bold mb-5 text-secondary">{SuperCoder}</h1>
-                <div class="col-lg-8 mx-auto">
+        <div class="container-fluid">
+            <div class="row px-4 py-5 my-5 text-center hero">
+                <h1 class="display-5 fw-bold mb-3 text-secondary">{SuperCoder}</h1>
+                <div class="col-lg-6 mx-auto">
                     <h3 class="lead mb-4 fs-2 fw-bold lh-base">
                         Auf dieser Seite möchten wir Ihnen einige der besten Webentwickler vorstellen. Wir definieren
                         sie
@@ -81,6 +83,8 @@
                     </p>
                 </div>
             </div>
+        </div>>
+        <div class="container">
             <div id="supercoder"
                 class="row row-cols-2 row-cols-lg-6 row-cols-md-4 g-4 px-5 pt-5 d-flex justify-content-center">
                 <div class="col">
